syntax = "proto3";

package rollup.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

// QueryService defines all tx endpoints for the rollup module.
service QueryService {
  rpc L1BlockInfo(L1BlockInfoRequest) returns (L1BlockInfoResponse) {
    option (google.api.http).get = "/rollup/l1blockinfo/{height}";
  }
}

// L1BlockInfoRequest is the request type for the Query/L1BlockInfo RPC
message L1BlockInfoRequest {
  option (gogoproto.goproto_getters) = false;
  // L2 block height; use 0 for latest block height
  uint64 height = 1;
}

// L1BlockInfoResponse is the stored L1 block info
message L1BlockInfoResponse {
  option (gogoproto.goproto_getters) = false;
  // Block number
  uint64 number = 1;
  // Block timestamp
  uint64 time = 2;
  // Base fee for the block
  bytes base_fee = 3;
  // Hash of the blocK; bytes32
  bytes block_hash = 4;
  // Number of L2 blocks since the start of the epoch
  // Not strictly a piece of L1 information. Represents the number of L2 blocks since the start of the epoch,
  // i.e. when the actual L1 info was first introduced.
  uint64 sequence_number = 5;
  // Fields 6,7,8 are SystemConfig
  // Address of the batcher; bytes20
  bytes batcher_addr = 6;
  // Overhead fee for L1; bytes32
  bytes l1_fee_overhead = 7;
  // Scalar fee for L1; bytes32
  bytes l1_fee_scalar = 8;
}
